--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "recyclerlistview",
-    "version": "3.0.5",
+    "version": "3.0.6",
     "description": "The listview that you need and deserve. It was built for performance, uses cell recycling to achieve smooth scrolling.",
     "main": "dist/reactnative/index.js",
     "types": "dist/reactnative/index.d.ts",
@@ -36,6 +36,8 @@
     "dependencies": {
         "lodash.debounce": "4.0.8",
         "prop-types": "15.5.8",
+        "react": "^16.13.1",
+        "react-native": "^0.62.2",
         "ts-object-utils": "0.0.5"
     },
     "peerDependencies": {
